--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@
   box-shadow: 1px 4px 12px rgba(0, 0, 0, 0.4);
 }
 
+/* * .border-box:hover {
+  border-color: var(--quinary-color);
+} */
+
 body {
   animation: opening 1s ease-in-out;
   background: var(--secondary-color);
@@ -200,7 +204,7 @@ p {
 }
 
 .project-1:hover img {
-  transform: scale(1.08);
+  transform: scale(1.065);
 }
 
 /* .project-1 .fidelity img {  
