--- a/css/style.css
+++ b/css/style.css
@@ -254,6 +254,7 @@ p {
 .project-description {
   line-height: 30px;
   text-align: center;
+  margin-bottom: 5rem;
 }
 
 #project-header {
@@ -261,7 +262,7 @@ p {
 }
 
 #about-header {
-  padding: 115px 0px 75px;
+  padding: 85px 0px 75px;
 }
 
 #epilogue-header {
