Lighten react icon color

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body.light {
 .light .fa-react:link,
 .light .fa-react:active,
 .light .fa-react:visited {
-  color: #036781;
+  color: #59cae7;
 }
 
 header {
