--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,18 @@ footer {
   }
 }
 
+@media only screen and (min-width: 1024px) {
+  .hero-enchilada {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .project-header-font {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
+
 @media (max-width: 1200px) {
   .project-title {
     font-size: 30px;
@@ -612,6 +624,7 @@ footer {
   .hero {
     padding: 73px 20px;
   }
+
   .btn-branding {
     margin-top: -41px;
   }
@@ -620,6 +633,11 @@ footer {
 @media (max-width: 576px) {
   h1 {
     font-size: 30px;
+  }
+
+  .hero-enchilada {
+    width: 100%;
+    height: 100vh;
   }
 
   .name {
@@ -652,8 +670,13 @@ footer {
     padding-top: 0px;
   }
 
-  #project-header {
+  /* #project-header {
     padding-top: 92px;
+  } */
+
+  .project-header-font {
+    margin-top: 0;
+    padding-top: 0;
   }
 
   .about-section,
