--- a/css/style.css
+++ b/css/style.css
@@ -552,8 +552,13 @@ footer {
   .hero {
     padding: 95px 20px;
   }
+
   .below-hero {
     margin-bottom: 40px;
+  }
+
+  .project-description .fa-react {
+    font-size: 32px;
   }
 }
 
@@ -622,6 +627,7 @@ footer {
   h1 {
     font-size: 40px;
   }
+
   .hero {
     padding: 73px 20px;
   }
