--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,9 @@ body.light {
 }
 
 .light nav ul li a:hover {
-  color: var(--secondary-color);
+  color: var(--quaternary-color);
+  text-decoration: var(--secondary-color) 0.1rem underline;
+  text-underline-offset: 0.3rem;
 }
 
 .light .name {
@@ -179,7 +181,7 @@ nav {
 
 nav ul li a {
   color: var(--quaternary-color);
-  font-weight: 700;
+  font-weight: 500;
   text-decoration: none;
   transition: 0.4s ease;
 }
@@ -212,6 +214,10 @@ h2,
 li a[href="#home"] {
   color: var(--quinary-color);
   font-weight: 500;
+}
+
+.light li a[href="#home"]:hover {
+  color: var(--quinary-color);
 }
 
 h1 {
@@ -495,7 +501,7 @@ footer .email-link {
   text-decoration: none;
   color: var(--quinary-color);
   font-size: 24px;
-  font-weight: 700;
+  font-weight: 500;
   text-align: center;
   margin: 15px 0px 0px;
   transition: 0.4s ease;
