--- a/css/style.css
+++ b/css/style.css
@@ -276,7 +276,7 @@ p {
 }
 
 .page-name {
-  padding: 0px 15px;
+  padding: 0.5rem 15px;
   /* border-top: 8px solid #6d6b6d; */
   /* border-bottom: 8px solid #6d6b6d; */
   /* background-color: #a39690; */
@@ -289,7 +289,7 @@ p {
   font-size: 50px;
   font-weight: 700;
   border-bottom: 0.5rem solid #64664c;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   /* box-shadow: 1px 4px 12px rgba(0, 0, 0, 0.4); */
   /* border-radius: 8px; */
   /* text-decoration: #64664c underline;
