--- a/css/style.css
+++ b/css/style.css
@@ -660,3 +660,16 @@ footer {
     padding-right: 10px;
   }
 }
+
+@media (max-width: 401px) {
+  li a[href="#home"],
+  .light li a[href="#home"],
+  nav ul li a {
+    font-size: 0.75rem;
+    font-weight: 700;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+}
