--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@ p {
   font-size: 2.813rem;
   font-weight: 700;
   border-bottom: 0.4rem solid #64664c;
+  text-transform: uppercase;
 }
 
 .project-title {
