--- a/css/style.css
+++ b/css/style.css
@@ -249,8 +249,12 @@ p {
   border-radius: 30px;
 }
 
-.below-hero {
-  margin-bottom: 69px;
+.hero .btn-branding:hover {
+  background-color: var(--quaternary-color);
+}
+
+.hero .fa-angles-down {
+  color: var(--branding-color);
 }
 
 .name {
@@ -262,6 +266,10 @@ p {
 .page-name {
   padding: 0.5rem 15px;
   color: #a39690;
+}
+
+.below-hero {
+  margin-bottom: 69px;
 }
 
 .project-header-font,
@@ -320,10 +328,6 @@ p {
   border-color: var(--branding-color);
   transition: 0.4s ease;
   box-shadow: 1px 4px 12px rgba(0, 0, 0, 0.4);
-}
-
-.hero .btn-branding:hover {
-  background-color: var(--quaternary-color);
 }
 
 .btn-launch-button:hover {
