--- a/css/style.css
+++ b/css/style.css
@@ -716,8 +716,9 @@ footer {
     font-size: 1.2rem;
   }
 
-  #project-header {
+  /* #project-header {
     padding: 130px 20px 75px;
+  } */
 }
 
 @media (max-width: 364px) {
